[workspace]
resolver = "2"
members = [
    "leptos-leaflet-hotline",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
keywords = ["leptos", "leaflet", "leptos-leaflet", "hotline", "interactive-maps"]
categories = ["development", "development::plugins", "interactive-maps::plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
