[package]
name = "leptos-leaflet-hotline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.5.0-beta", default-features=false}
leptos_meta = {version = "0.5.0-beta", default-features=false }
leptos-leaflet = { git="https://github.com/headless-studio/leptos-leaflet", branch="main", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
paste = "1.0"
rand = "0.8"
regex = "1.9"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "console",
    "HtmlElement",
    "HtmlDivElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "ImageData",
    "Navigator"
] }

