[package]
name = "leptos-leaflet-hotline"
description = "leptos leaflet polyline components with color gradients"
version = "0.1.0"
authors = ["Eric Krall <krall.eric@gmail.com>"]
edition = "2021"
repository = "https://github.com/ekrall1/leptos-leaflet-hotline"
readme = "README.md"
license = "MIT"
keywords = ["leptos", "leaflet", "leptos-leaflet", "hotline", "interactive-maps"]
categories = ["development", "development::plugins", "interactive-maps::plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.6", default-features=false}
leptos_meta = {version = "0.6", default-features=false }
leptos-leaflet = "0.7.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
paste = "1.0"
rand = "0.8"
regex = "1.9"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "console",
    "HtmlElement",
    "HtmlDivElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "ImageData",
    "Navigator"
] }

